# qt_learning

./: .gitignore
calculator/: CMakeLists.txt  main.cpp
code_reuse/: CMakeLists.txt  editor.cpp  editor.h  main.cpp  mainWindow.cpp  mainWindow.h  price_calc.cpp  price_calc.h
code_reuse/output/release/: pricecalc
notepad/: CMakeLists.txt  main.cpp  mainWindow.cpp  mainWindow.h
notepad/output/debug/: notepad
notepad/output/release/: notepad
qtguide/: CMakeLists.txt  main.cpp
